finished section price

--- a/index.html
+++ b/index.html
@@ -276,6 +276,65 @@
                         <h3>Junta-te a nós no próximo dia 24 de Janeiro para um desafio cycling.</h3>
                         <button id="btn-banner">Inscreve-te aqui</button>
                 </section>
+                <!-- Section text -->
+                <section class="title">
+                    <h3>Planos personalizados</h3>
+                </section>
+                <!-- Section price -->
+                <section class="price-container">
+                    <div id="price-basic" class="price-card">
+                        <h4>
+                            Bem-estar e Saúde 
+                        </h4>
+                        <p id="basic-plan">Plano Básico</p>
+                        <h3>350€<p>/por mês</p></h3>
+                        <button class="price" id="btn-price">
+                            Aderir
+                        </button>
+                        <p><span><i class="fa-regular fa-circle-check"></i></i></span>Aulas de Yoga, Pilates;</p>
+                        <p><span><i class="fa-regular fa-circle-check"></i></i></span>Treinos Funcionais para melhoria de mobilidade;</p>
+                        <p><span><i class="fa-regular fa-circle-check"></i></i></span>Massagem desportiva ou terapêutica;</p>
+                        <p><span><i class="fa-regular fa-circle-check"></i></i></span>Workshops de meditação e gestão de stress;</p>
+                        <p><span><i class="fa-regular fa-circle-check"></i></i></span>Acompanhamento Holístico que combina nutrição, treino leve e práticas para relaxamento;</p>
+                    </div>
+                    <div id="price-basic-two" class="price-card">
+                        <h4>
+                            Perda de Peso
+                        </h4>
+                        <p id="basic-plan">Plano Básico</p>
+                        <h3>450€<p>/por mês</p></h3>
+                        <button class="price" id="btn-price">
+                            Aderir
+                        </button>
+                        <p><span><i class="fa-regular fa-circle-check"></i></i></span>Consultoria nutricional personalizada</p>
+                        <p><span><i class="fa-regular fa-circle-check"></i></i></span>Aulas em grupo focadas:
+                            HIIT, Zumba, Circuitos;</p>
+                        <p><span><i class="fa-regular fa-circle-check"></i></i></span>Treinos Personalizados;</p>
+                        <p><span><i class="fa-regular fa-circle-check"></i></i></span>Acompanhamento com Medições Corporais;</p>
+                        <p><span><i class="fa-regular fa-circle-check"></i></i></span>Workshops de Estilo de Vida Saudável;</p>
+                    </div>
+                    <div id="price-basic-tree" class="price-card">
+                        <h4>
+                            Ganho de Massa Muscular
+                        </h4>
+                        <p id="basic-plan">Plano Básico</p>
+                        <h3>600€<p>/por mês</p></h3>
+                        <button class="price" id="btn-price">
+                            Aderir
+                        </button>
+                        <p><span><i class="fa-regular fa-circle-check"></i></i></span>Treino de Força Personalizado:</p>
+                        <p><span><i class="fa-regular fa-circle-check"></i></i></span>Consultoria nutricional para Hipertrofia:</p>
+                        <p><span><i class="fa-regular fa-circle-check"></i></i></span>Levantamento olímpico ou powerlifting.</p>
+                        <p><span><i class="fa-regular fa-circle-check"></i></i></span>Demonstração e correção de técnica de exercícios compostos </p>
+                        <p><span><i class="fa-regular fa-circle-check"></i></i></span>Acompanhamento com Personal Trainer e suporte com suplementação;</p>
+                    </div>
+                </section>
+            </section>
+            <section class="final-banner">
+                <div class="final-banner-container">
+                    <h3>O sucesso é a soma de pequenos esforços repetidos dia após dia.</h3>
+                    <p>Robert Collier</p>
+                </div>
             </section>
         </main>
         <!-- Footer -->
