--- a/index.html
+++ b/index.html
@@ -120,10 +120,9 @@
                             data-bs-target="#carouselExampleControls"
                             data-bs-slide="prev"
                         >
-                            <span
-                                class="carousel-control-prev-icon"
-                                aria-hidden="true"
-                            ></span>
+                            <span aria-hidden="true">
+                            <img id="previous" src="./home_page/img/icons/previous.svg" alt="">
+                        </span>
                             <span>Anterior</span>
                         </button>
                         <button
@@ -133,10 +132,9 @@
                             data-bs-slide="next"
                         >
                             <span>Próximo</span>
-                            <span
-                                class="carousel-control-next-icon"
-                                aria-hidden="true"
-                            ></span>
+                            <span aria-hidden="true">
+                                <img id="next" src="./home_page/img/icons/next.svg" alt="">
+                            </span>
                         </button>
                     </div>
                     <div class="carousel-inner">
@@ -183,10 +181,9 @@
                                 data-bs-target="#carouselExampleControls2"
                                 data-bs-slide="prev"
                             >
-                                <span
-                                    class="carousel-control-prev-icon"
-                                    aria-hidden="true"
-                                ></span>
+                            <span aria-hidden="true">
+                                <img id="previous" src="./home_page/img/icons/previous.svg" alt="">
+                            </span>
                                 <span>Anterior</span>
                             </button>
                             <button
@@ -195,11 +192,10 @@
                                 data-bs-target="#carouselExampleControls2"
                                 data-bs-slide="next"
                             >
-                                <span>Próximo</span>
-                                <span
-                                    class="carousel-control-next-icon"
-                                    aria-hidden="true"
-                                ></span>
+                            <span>Próximo</span>
+                            <span aria-hidden="true">
+                                <img id="next" src="./home_page/img/icons/next.svg" alt="">
+                            </span>
                             </button>
                         </div>
                         <div class="carousel-inner">
@@ -348,7 +344,7 @@
                         </h4>
                     </div>
                     <div class="input-container">
-                        <i class="fas fa-user"></i>
+                        <img src="home_page/img/icons/user.svg" alt="">
                         <input
                             class
                             type="email"
@@ -362,10 +358,11 @@
                 <div class="social-container">
                     <div id="social-icons">
                         <span
-                            ><i class="fa-brands fa-square-facebook"></i
-                        ></span>
-                        <span><i class="fa-brands fa-instagram"></i></span>
-                        <span><i class="fa-regular fa-envelope"></i></span>
+                            ><img src="home_page/img/icons/facebook.svg" alt=""></span>
+                        <span
+                            ><img src="home_page/img/icons/instagram.svg" alt=""></span>
+                        <span
+                            ><img src="home_page/img/icons/email.svg" alt=""></span>
                     </div>
                     <div class="social-text-container">
                         <p>
