--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -66,7 +66,7 @@
 
     <!--Formulário de contactos-->
     <section class="contacts-form">
-      
+
       <div class="contacts-form__description">
         <h3 class="contacts-form__title">O ShapeUp está sempre disponível para o ajudar.</h3>
         <p class="contacts-form__text">
@@ -77,17 +77,14 @@
       </div>
 
       <div class="contacts-form__group">
-        <h4 class="contacts-form__subtitle">Contacte-nos.</h4>
+        <h4 class="contacts-form__subtitle">Envie as suas dúvidas</h4>
 
         <form class="contacts-form__form">
-          <div class="contacts-form__field">
-            <label for="firstName" class="contacts-form__label"></label>
-            <input type="text" id="firstName" name="firstName" class="contacts-form__input" placeholder="Primeiro Nome">
-          </div>
 
           <div class="contacts-form__field">
-            <label for="lastName" class="contacts-form__label"></label>
-            <input type="text" id="lastName" name="lastName" class="contacts-form__input" placeholder="Último Nome">
+            <label for="firstLastName" class="contacts-form__label"></label>
+            <input type="text" id="firstLastName" name="firstLastName" class="contacts-form__input"
+              placeholder="Primeiro e último Nome">
           </div>
 
           <div class="contacts-form__field">
@@ -107,6 +104,37 @@
 
     </section>
 
+    <!--Três Formas de contacto-->
+
+    <section id="threeContacts">
+      <div class="threeContacts__address">
+        <h4><img src="./img/moradaIcone.svg" alt="Morada Icon" class="threeContacts__icon"> Morada</h4>
+        <p>R. de Ciríaco Cardoso 186</p>
+        <p>4150-212, Porto</p>
+      </div>
+
+      <div class="threeContacts__phones">
+        <h4><img src="./img/telefonesIcone.svg" alt="Telefone Icon" class="threeContacts__icon"> Telefones</h4>
+        <p>+351 226 195 200</p>
+        <p>+351 912 888 222</p>
+      </div>
+
+      <div class="threeContacts__email">
+        <h4><img src="./img/emailIcone.svg" alt="Email Icon" class="threeContacts__icon"> E-mail</h4>
+        <p>Geral: geral@shapeup.pt</p>
+        <p>Financeiro: financeiro@shapeup.pt</p>
+      </div>
+
+    </section>
+
+    <!--Mapa-->
+
+    <section class="map-container">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3003.9009661160053!2d-8.652847587823686!3d41.1585122712103!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd246582df7d8785%3A0xc967e42932cd22b4!2sCESAE%20Digital%20-%20Centro%20para%20o%20Desenvolvimento%20de%20Compet%C3%AAncias%20Digitais!5e0!3m2!1spt-PT!2spt!4v1733154580750!5m2!1spt-PT!2spt"
+        loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </section>
 
   </main>
 
