--- a/index.html
+++ b/index.html
@@ -139,25 +139,37 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img
-                                src="./home_page/img/courossel_img/01.png"
-                                class="d-block w-100"
-                                alt="..."
-                            />
+                            <picture>
+                                <source media="(max-width: 600px)" srcset="./home_page/img/courossel_img/01.png">
+                                <source media="(min-width: 601px)" srcset="./home_page/img/courossel_img/01.png">
+                                <img
+                                    src="./home_page/img/courossel_img/01.png"
+                                    class="d-block w-100"
+                                    alt="..."
+                                />
+                            </picture>
                         </div>
                         <div class="carousel-item">
-                            <img
-                                src="./home_page/img/courossel_img/02.png"
-                                class="d-block w-100"
-                                alt="..."
-                            />
+                            <picture>
+                                <source media="(max-width: 600px)" srcset="./home_page/img/courossel_img/02.png">
+                                <source media="(min-width: 601px)" srcset="./home_page/img/courossel_img/02.png">
+                                <img
+                                    src="./home_page/img/courossel_img/02.png"
+                                    class="d-block w-100"
+                                    alt="..."
+                                />
+                            </picture>
                         </div>
                         <div class="carousel-item">
-                            <img
-                                src="./home_page/img/courossel_img/03.png"
-                                class="d-block w-100"
-                                alt="..."
-                            />
+                            <picture>
+                                <source media="(max-width: 600px)" srcset="./home_page/img/courossel_img/03.png">
+                                <source media="(min-width: 601px)" srcset="./home_page/img/courossel_img/03.png">
+                                <img
+                                    src="./home_page/img/courossel_img/03.png"
+                                    class="d-block w-100"
+                                    alt="..."
+                                />
+                            </picture>
                         </div>
                     </div>
                 </div>
