add image mobile

--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
+                            <picture>
+                                <source media="(max-width: 600px)" srcset="./home_page/img/courossel_mobile/01.png">
+                                <source media="(min-width: 600px)" srcset="./home_page/img/feedback_img/01.png">
+                            </picture>
                             <img
                                 src="./home_page/img/courossel_img/01.png"
                                 class="d-block w-100"
@@ -146,6 +150,10 @@
                             />
                         </div>
                         <div class="carousel-item">
+                            <picture>
+                                <source media="(max-width: 600px)" srcset="./home_page/img/courossel_mobile/02.png">
+                                <source media="(min-width: 600px)" srcset="./home_page/img/feedback_img/02.png">
+                            </picture>
                             <img
                                 src="./home_page/img/courossel_img/02.png"
                                 class="d-block w-100"
@@ -153,6 +161,10 @@
                             />
                         </div>
                         <div class="carousel-item">
+                            <picture>
+                                <source media="(max-width: 600px)" srcset="./home_page/img/courossel_mobile/03.png">
+                                <source media="(min-width: 600px)" srcset="./home_page/img/feedback_img/03.png">
+                            </picture>
                             <img
                                 src="./home_page/img/courossel_img/03.png"
                                 class="d-block w-100"
@@ -202,6 +214,10 @@
                             <div class="carousel-item active">
                                 <div class="feedback-container">
                                     <div id="feedback-img">
+                                        <picture>
+                                            <source media="(max-width: 600px)" srcset="./home_page/img/feedback_mobile/01.png">
+                                            <source media="(min-width: 600px)" srcset="./home_page/img/feedback_img/01.png">
+                                        </picture>
                                         <img
                                             src="./home_page/img/feedback_img/01.png"
                                             alt="feedbackimg"
@@ -225,6 +241,10 @@
                             <div class="carousel-item">
                                 <div class="feedback-container">
                                     <div id="feedback-img">
+                                        <picture>
+                                            <source media="(max-width: 600px)" srcset="./home_page/img/feedback_mobile/02.png">
+                                            <source media="(min-width: 600px)" srcset="./home_page/img/feedback_img/02.png">
+                                        </picture>
                                         <img
                                             src="./home_page/img/feedback_img/02.png"
                                             alt="feedbackimg"
@@ -247,6 +267,10 @@
                             <div class="carousel-item">
                                 <div class="feedback-container">
                                     <div id="feedback-img">
+                                        <picture>
+                                            <source media="(max-width: 600px)" srcset="./home_page/img/feedback_mobile/03.png">
+                                            <source media="(min-width: 600px)" srcset="./home_page/img/feedback_img/03.png">
+                                        </picture>
                                         <img
                                             src="./home_page/img/feedback_img/03.png"
                                             alt="feedbackimg"
