--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </section>
                 <!-- Section numbers -->
                 <section class="number-container">
-                    <div class="numbers-container">
+                    <div id="numbers-container">
                         <div id="first-number">
                             <h1 id="number-one">0</h1>
                             <h4>Vidas Transformadas</h4>
@@ -91,7 +91,7 @@
                             <h4>Profissionais Qualificados</h4>
                         </div>
                     </div>
-                    <dir class="numbers-container">
+                    <dir id="numbers-container">
                         <div id="third-number">
                             <h1>0</h1>
                             <h4>Anos de Serviço</h4>
@@ -140,37 +140,36 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <picture>
-<<<<<<< HEAD
-                                <source media="(max-width: 600px)" srcset="./home_page/img/courossel_mobile/01.png">
-                                <source media="(min-width: 600px)" srcset="./home_page/img/feedback_img/01.png">
+                                <source media="(max-width: 600px)" srcset="./home_page/img/courrossel_mobile/01.png">
+                                <source media="(min-width: 600px)" srcset="./home_page/img/courrossel_img/01.png">
+                                <img
+                                    src="./home_page/img/courossel_img/01.png"
+                                    class="d-block w-100"
+                                    alt="..."
+                                />
                             </picture>
-                            <img
-                                src="./home_page/img/courossel_img/01.png"
-                                class="d-block w-100"
-                                alt="..."
-                            />
                         </div>
                         <div class="carousel-item">
                             <picture>
-                                <source media="(max-width: 600px)" srcset="./home_page/img/courossel_mobile/02.png">
-                                <source media="(min-width: 600px)" srcset="./home_page/img/feedback_img/02.png">
+                                <source src="" media="(max-width: 600px)" srcset="./home_page/img/courrossel_mobile/02.png">
+                                <source media="(min-width: 600px)" srcset="./home_page/img/courrossel_img/02.png">
+                                <img
+                                    src="./home_page/img/courossel_img/02.png"
+                                    class="d-block w-100"
+                                    alt="..."
+                                />
                             </picture>
-                            <img
-                                src="./home_page/img/courossel_img/02.png"
-                                class="d-block w-100"
-                                alt="..."
-                            />
                         </div>
                         <div class="carousel-item">
                             <picture>
-                                <source media="(max-width: 600px)" srcset="./home_page/img/courossel_mobile/03.png">
-                                <source media="(min-width: 600px)" srcset="./home_page/img/feedback_img/03.png">
+                                <source media="(max-width: 600px)" srcset="./home_page/img/courrossel_mobile/03.png">
+                                <source media="(min-width: 600px)" srcset="./home_page/img/courrossel_img/03.png">
+                                <img
+                                    src="./home_page/img/courossel_img/03.png"
+                                    class="d-block w-100"
+                                    alt="..."
+                                />
                             </picture>
-                            <img
-                                src="./home_page/img/courossel_img/03.png"
-                                class="d-block w-100"
-                                alt="..."
-                            />
                         </div>
                     </div>
                 </div>
