--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                     <h1>Mais do que treino, é um estilo de vida.</h1>
                 </section>
                 <!-- Section numbers -->
-                <section class="number-container">
-                    <div id="numbers-container">
+                <section id="number-container">
+                    <div class="numbers-container">
                         <div id="first-number">
                             <h1 id="number-one">0</h1>
                             <h4>Vidas Transformadas</h4>
@@ -91,7 +91,7 @@
                             <h4>Profissionais Qualificados</h4>
                         </div>
                     </div>
-                    <dir id="numbers-container">
+                    <dir class="numbers-container">
                         <div id="third-number">
                             <h1>0</h1>
                             <h4>Anos de Serviço</h4>
