--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -176,7 +176,6 @@
                 <h4 class="card__title">Telefones</h4>
               </div>
               <p class="card__text">+351 226 195 200</p>
-              <p class="card__text">+351 912 888 222</p>
             </div>
           </div>
 
@@ -195,8 +194,7 @@
                 />
                 <h4 class="card__title">E-mail</h4>
               </div>
-              <p class="card__text">Geral: geral@shapeup.pt</p>
-              <p class="card__text">Financeiro: financeiro@shapeup.pt</p>
+              <p class="card__text">geral@shapeup.pt</p>
             </div>
           </div>
         </section>
