--- a/treino/treino.html
+++ b/treino/treino.html
@@ -95,7 +95,7 @@
                         <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionPlanos">
                             <div class="accordion-body">
                                 <div class="accordion-img">
-                                    <img src="img/ginasio.jpg" alt="ginasio">
+                                    <img src="img/yoga.jpg" alt="ginasio">
                                 </div>
                                 <div class="accordion-text">
                                     <p>Descubra o equilíbrio perfeito entre corpo e mente com o plano Bem-estar e Saúde. Aproveite aulas de yoga,
@@ -116,7 +116,7 @@
                         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionPlanos">
                             <div class="accordion-body">
                                 <div class="accordion-img">
-                                    <img src="img/ginasio.jpg" alt="ginasio">
+                                    <img src="img/perdaPeso.jpg" alt="ginasio">
                                 </div>
                                 <div class="accordion-text">
                                     <p>Transforme seu corpo com o plano Perda de Peso. Tenha acesso a treinos dinâmicos, 
@@ -127,7 +127,7 @@
                             </div>
                         </div>
                      </div>
-                     <hr class="divider"/>    
+                     <hr class="divider"/>
                      
                     <!-- Ganho de Massa Muscular 3 -->
                      <div class="accordion-item">
@@ -138,7 +138,7 @@
                         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionPlanos">
                             <div class="accordion-body">
                                 <div class="accordion-img">
-                                    <img src="img/ginasio.jpg" alt="ginasio">
+                                    <img src="img/MassaMuscular.jpg" alt="ginasio">
                                 </div>
                                 <div class="accordion-text">
                                     <p>Construa força e definição com o plano Ganho de Massa Muscular. Treinos personalizados, suporte em suplementação e 
